# israel-mock-data-generator

./: .gitignore  README.md  pyproject.toml
faker_israel/: __init__.py  _base.jinja.html  address_en.py  address_he.py  banks.py  common.py  common_draw.py  company_he.py  educational_institues.py
faker_israel/banks/: __init__.py  bank.py  discount.py  earth.py  fibi.py  leumi.py  mizrahi.py  moon.py  north.py  poalim.py  south.py  sun.py  yahav.py
faker_israel/data/: .gitignore  README.md  discount_branches.json  discount_cities.json  fibi_branches.json  label_studio_bank_statements.json  label_studio_bank_statements.xml  leumi_branches.json  mizrahi_branches.json  poalim_branches.json  poalim_cities.json
faker_israel/salaries/: __init__.py  _north_base.jinja.html  _north_center_table_row.html  center.jinja.html  center.py  east-page-1.jinja.html  east-page-2.jinja.html  east.jinja.html  east.py  moon.jinja.html  moon.py  north.html  north.py  north_page1.jinja.html  north_page2.jinja.html  salary.py  south.jinja.html  south.py  sun.jinja.html  sun.py  sun_page_2.jinja.html  west.jinja.html  west.py
israel_mock_data_generator/: cli.py  extract_font_names.py  faker_var_value.py  generate.py  generate_bank_statements.py  generate_pdf_multi_config.py  pdf_multi_config_constants.py
tests/: test_bank_statements.py  test_banks.py
