[tool.poetry]
name = "israel-mock-data-generator"
version = "0.0.0"
description = ""
authors = ["Ori Hoch <ori@uumpa.com>"]
readme = "README.md"
packages = [
    {include = "israel_mock_data_generator"},
    {include = "faker_israel"}
]

[tool.poetry.dependencies]
python = "^3.8"
faker = "^20.1.0"
click = "^8.1.7"
pytest = "^7.4.3"
botocore = "^1.33.13"
dataflows = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ilmockgen = "israel_mock_data_generator.cli:main"
